Updated README It needs more information and improvements

--- a/README
+++ b/README
@@ -1,2 +1,21 @@
-Dummy chat is a funny chatting with dummies. Each client has a dummy that can play with it or move it anywhere!
-Dummy chat uses NodeJS and Socket.IO
+# Dummy Chat
+============
+Dummy chat is a simple NodeJS application which let's users to move around in a farm and *shout*! Each user has a dummy to play with, and communicate with other users in public.
+
+
+
+### Purpose
+------------
+Dummy chat is generally developed for educational purposes and biginners who want to get to know NodeJS and Socke.IO.
+
+
+### Requirements
+-----------------
++ NodeJS
++ Socket.IO
+
+
+### Main Credits
+----------------
++ [Afshin Mehrabani] (https://github.com/afshinm "Afshin Mehrabani on GitHub")
++ [Fardin Koochaki] (https://github.com/Fardink "Fardin Koochaki on GitHub")
